[gd_scene load_steps=9 format=3 uid="uid://ciisd7blrkrdp"]

[ext_resource type="PackedScene" uid="uid://b1f4280rnaacr" path="res://scenes/enemies/default_enemy.tscn" id="1_wd7an"]
[ext_resource type="Script" path="res://scripts/enemies/tier1/navigation_enemy.gd" id="2_ef51p"]
[ext_resource type="PackedScene" uid="uid://bf3bdqpypeb71" path="res://scenes/technical/shadow_middle.tscn" id="3_8e666"]

[sub_resource type="Animation" id="Animation_ntoua"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_mnrn5"]
resource_name = "move"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -33), Vector2(0, -32), Vector2(0, -33), Vector2(0, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0698132, 0.0, -0.0698132, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sj4u0"]
_data = {
"RESET": SubResource("Animation_ntoua"),
"move": SubResource("Animation_mnrn5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkyq6"]
size = Vector2(28, 28)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j0m7u"]
radius = 2.0

[node name="NavigationEnemy" instance=ExtResource("1_wd7an")]
script = ExtResource("2_ef51p")
search_target_time = 0.5

[node name="ShadowMiddle" parent="ShadowPoint" index="0" instance=ExtResource("3_8e666")]
position = Vector2(0, 6)

[node name="Sprite" parent="RotationalPart" index="0"]
self_modulate = Color(0.945098, 0.313726, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="RotationalPart/Sprite" index="0"]
libraries = {
"": SubResource("AnimationLibrary_sj4u0")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreaNode/AttackArea2D" index="0"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_wkyq6")

[node name="Collision" parent="." index="4"]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_j0m7u")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="5"]
avoidance_enabled = true
radius = 20.0
max_speed = 50.0
avoidance_layers = 6
avoidance_mask = 2
debug_enabled = true

[node name="SearchTargetTimer" type="Timer" parent="Timers" index="1"]
autostart = true

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="Timers/SearchTargetTimer" to="." method="_on_search_target_timer_timeout"]
